--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
 
         <section id="contato" class="section">
             <h2>Entre em Contato</h2>
-            <p>Email: Graficabeno74@gmail.com.br</p>
-            <p>Telefone: (21) 97006-1128</p>
+            <a href="https://wa.me/5521990171852?text=Olá,%20gostaria%20de%20saber%20mais!" target="_blank">
+                <button style="background-color: #25d366; color: white; padding: 10px 20px; border: none; border-radius: 5px; font-size: 30px; cursor: pointer;">
+                    Entre em Contato via WhatsApp
+                </button>
+            </a>
         </section>
     </main>
 
